--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pick environment variable easly",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -23,11 +23,14 @@
   },
   "homepage": "https://github.com/GiovanniCardamone/envpick#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "eslint": "^8.13.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
